--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ h2 {
 .city{
     display: flex;
     justify-content: space-between;
-    margin: 20px 0;
+    margin: 10px 0;
+    padding: 30px 0;
     border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
 }
 .city:last-child{
