--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,15 @@ h1{
     text-align: center;
     font-family: sans-serif;
     font-size: 36px;
+    background-color: rgba(100, 100, 111, 0.2);
+    border-radius: 10px;
+    transition: 0.3s;
     
     
+}
+h1.hover{
+
+    color: aquamarine;
 }
 h2 {
 
@@ -33,6 +40,7 @@ h2 {
     margin: 10px 0;
     padding: 30px 0;
     border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+
 }
 .city:last-child{
 
@@ -65,9 +73,9 @@ select{
     border-radius: 4px;
     padding: 10px;
     font-size: 18px;
+    cursor: pointer;
     
 }
-
 
 footer{
 
